@@ -1,3 +1,8 @@
+2003-01-09  Lamar Owen <lamar.owen@wgcr.org>
+	
+	* nspostgres.h: changed include order and conditionals for
+	AOLserver 4 use.
+
 2002-12-23  Lamar Owen <lamar.owen@wgcr.org>
 
 	* nspostgres release 3.5 Official
